--- a/config/database.yml
+++ b/config/database.yml
@@ -12,17 +12,18 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: my_database_development
+   socket: /var/pgsql_socket 
 
-  
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: my_database_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: my_database_production
