--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,10 @@ development:
 test:
   <<: *default
   database: my_database_test
+  socket: /var/pgsql_socket # <-- this line
+
 
 production:
   <<: *default
   database: my_database_production
+  socket: /var/pgsql_socket # <-- this line
